Refactor menu management and remove receipt services
Replaced "ReceiptService" with "RecipeService" for better alignment with naming conventions. Introduced enhanced functionality for managing weekly and daily menus, including user-specific operations. Added access control checks to verify user ownership, ensuring proper authorization for menu actions.